--- a/hint2mint/project/version2/pages/privacy.html
+++ b/hint2mint/project/version2/pages/privacy.html
@@ -109,7 +109,7 @@ Contact- 9971915524
 </div>
   </body>
 
-  <footer class="site-footer">
+  <footer class="site-footer" id="page-footer">
     <div class="container">
       <div class="row">
         <div class="col-md-9">
@@ -121,11 +121,12 @@ Contact- 9971915524
             <div class="col-md-3 ml-auto">
               <h2 class="footer-heading mb-4">Features</h2>
               <ul class="list-unstyled">
-                <li><a href="#">About Us</a></li>
-                <li><a href="#">Services</a></li>
+                <li><a href="../index.html#about-section">About Us</a></li>
+                <li><a href="../index.html#services-section">Services</a></li>
                 <li><a href="tandc.html">Terms & Conditions</a></li>
                   <li><a href="disclaimer.html">Disclaimer</a></li>
                   <li><a href="privacy.html">Privacy Policy</a></li>
+                
               </ul>
             </div>
             <div class="col-md-3">
@@ -135,7 +136,7 @@ Contact- 9971915524
               <a href="https://www.instagram.com/hint2mint/" class="pl-0 pr-2"><span class="icon-instagram"></span></a>
               <a href="https://www.linkedin.com/company/hint2mint/?viewAsMember=true" class="pl-0 pr-2"><span class="icon-linkedin"></span></a>
               <a href="https://www.youtube.com/channel/UCL6KvnZOYKuY9np9TYIHyIQ" class="pl-0 pr-2"><span class="icon-youtube"></span></a>
-
+  
             </div>
           </div>
         </div>
