--- a/hint2mint/project/version2/index.html
+++ b/hint2mint/project/version2/index.html
@@ -6,59 +6,41 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-  <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700,900" rel="stylesheet">
-  <link rel="stylesheet" href="../fonts/icomoon/style.css">
+  <link href="https://fonts.googleapis.comcss?family=Quicksand:300,400,500,700,900" rel="stylesheet">
+  <link rel="stylesheet" href="fonts/icomoon/style.css">
 
-  <link rel="stylesheet" href="../css/bootstrap.min.css">
-  <link rel="stylesheet" href="../css/jquery-ui.css">
-  <link rel="stylesheet" href="../css/owl.carousel.min.css">
-  <link rel="stylesheet" href="../css/owl.theme.default.min.css">
-  <link rel="stylesheet" href="../css/owl.theme.default.min.css">
+  <link rel="stylesheet" href="css/bootstrap.min.css">
+  <link rel="stylesheet" href="css/jquery-ui.css">
+  <link rel="stylesheet" href="css/owl.carousel.min.css">
+  <link rel="stylesheet" href="css/owl.theme.default.min.css">
+  <link rel="stylesheet" href="css/owl.theme.default.min.css">
 
-  <link rel="stylesheet" href="../css/jquery.fancybox.min.css">
+  <link rel="stylesheet" href="css/jquery.fancybox.min.css">
 
-  <link rel="stylesheet" href="../css/bootstrap-datepicker.css">
+  <link rel="stylesheet" href="css/bootstrap-datepicker.css">
 
-  <link rel="stylesheet" href="../fonts/flaticon/font/flaticon.css">
+  <link rel="stylesheet" href="fonts/flaticon/font/flaticon.css">
 
-  <link rel="stylesheet" href="../css/aos.css">
+  <link rel="stylesheet" href="css/aos.css">
 
-  <link rel="stylesheet" href="../css/style.css">
-  
-  <script src='jquery.js' type='text/javascript'></script>
+  <link rel="stylesheet" href="css/style.css">
+
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script>
     $(function () {
-      $("#about-section").load("../components/about.html");
+      $("#about-section").load("components/about.html");
+      $("#team-section").load("components/team-section.html");
+      $("#services-section").load("components/services-section.html");
+      $("#work-section").load("components/work-section.html");
+      $("#contact-section").load("components/contact-section.html");
+      $("#blog-section").load("components/blog-section.html");
+      $("#site-section").load("components/site-section.html");
+      $("#testimonial").load("components/testimonial.html");
+      $("#index-footer").load("components/headerFooter/index-footer.html");
+
     });
-  
-    $(function () {
-      $("#team-section").load("../components/team-section.html");
-    });
-  
-    $(function () {
-      $("#services-section").load("../components/services-section.html");
-    });
-  
-    $(function () {
-      $("#work-section").load("../components/work-section.html");
-    });
-  
-    $(function () {
-      $("#contact-section").load("../components/contact-section.html");
-    });
- 
-    $(function () {
-      $("#blog-section").load("../components/blog-section.html");
-    });
-  
-    $(function () {
-      $("#site-section").load("../components/site-section.html");
-    });
-  
-    $(function () {
-      $("#testimonial").load("../components/testimonial.html");
-    });
+
+
   </script>
 
 
@@ -111,8 +93,8 @@
           <div class="row align-items-center">
 
             <div class="col-11 col-xl-2">
-              <h1 class="mb-0 site-logo"><a href="index.html" class="text-black h2 mb-0"><img src="../images/logo.jpg"
-                    alt="../images/logo.jpg"><span class="text-primary"></span> </a></h1>
+              <h1 class="mb-0 site-logo"><a href="index.html" class="text-black h2 mb-0"><img src="images/logo.jpg"
+                    alt="images/logo.jpg"><span class="text-primary"></span> </a></h1>
             </div>
             <div class="col-12 col-md-10 d-none d-xl-block">
               <nav class="site-navigation position-relative text-right" role="navigation">
@@ -144,8 +126,8 @@
         </div>
 
       </header>
-      
-      <div class="site-blocks-cover overlay" style="background-image: url('../images/cover.jpg');" data-aos="fade"
+
+      <div class="site-blocks-cover overlay" style="background-image: url('images/cover.jpg');" data-aos="fade"
         data-stellar-background-ratio="0.5">
         <div class="container">
           <div class="row align-items-center justify-content-center text-center">
@@ -183,92 +165,28 @@
     </div>
   </a>
 
-  <footer class="site-footer" id="footer">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-9">
-          <div class="row">
-            <div class="col-md-5">
-              <h2 class="footer-heading mb-4">About Us</h2>
-              <p>We at Hint2Mint are committed to spread financial awareness at large. Along with the management of your
-                finances, we are always committed to enhance your financial education in the form of webinars and
-                seminars from basic understanding of finance to the heights of complex professional aspects of financial
-                management.</p>
-            </div>
-            <div class="col-md-3 ml-auto">
-              <h2 class="footer-heading mb-4">Features</h2>
-              <ul class="list-unstyled">
-                <li><a href="#about-section">About Us</a></li>
-                <li><a href="#services-section">Services</a></li>
-                <li><a href="../pages/tandc.html">Terms & Conditions</a></li>
-                <li><a href="../pages/disclaimer.html">Disclaimer</a></li>
-                <li><a href="../pages/privacy.html">Privacy Policy</a></li>
+  <footer class="site-footer" id="index-footer">
 
-              </ul>
-            </div>
-            <div class="col-md-3">
-              <h2 class="footer-heading mb-4">Follow Us</h2>
-              <a href="https://www.facebook.com/pages/category/Product-Service/Hint2Mint-107676550799236/"
-                class="pl-0 pr-2"><span class="icon-facebook"></span></a>
-              <a href="https://twitter.com/chariotfinserve" class="pl-2 pr-2"><span class="icon-twitter"></span></a>
-              <a href="https://www.instagram.com/hint2mint/" class="pl-2 pr-2"><span class="icon-instagram"></span></a>
-              <a href="https://www.linkedin.com/company/hint2mint/?viewAsMember=true" class="pl-2 pr-2"><span
-                  class="icon-linkedin"></span></a>
-              <a href="https://www.youtube.com/channel/UCL6KvnZOYKuY9np9TYIHyIQ" class="pl-2 pr-2"><span
-                  class="icon-youtube"></span></a>
-
-            </div>
-          </div>
-        </div>
-        <div class="col-md-3">
-          <h2 class="footer-heading mb-4">Subscribe Newsletter</h2>
-          <form action="#" method="post">
-            <div class="input-group mb-3">
-              <input type="text" class="form-control border-secondary text-white bg-transparent"
-                placeholder="Enter Email" aria-label="Enter Email" aria-describedby="button-addon2">
-              <div class="input-group-append">
-                <button class="btn btn-primary text-white" type="button" id="button-addon2">Send</button>
-              </div>
-            </div>
-          </form>
-        </div>
-      </div>
-      <div class="row pt-5 mt-5 text-center">
-        <div class="col-md-12">
-          <div class="border-top pt-5">
-            <p>
-              <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-              Copyright &copy;
-              <script>document.write(new Date().getFullYear());</script> All rights reserved <i
-                class="icon-heart text-danger" aria-hidden="true"></i> <a href="https://colorlib.com"
-                target="_blank"></a>
-              <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-            </p>
-          </div>
-        </div>
-
-      </div>
-    </div>
   </footer>
 
 
 
 
-  <script src="../js/jquery-3.3.1.min.js"></script>
-  <script src="../js/jquery-migrate-3.0.1.min.js"></script>
-  <script src="../js/jquery-ui.js"></script>
-  <script src="../js/popper.min.js"></script>
-  <script src="../js/bootstrap.min.js"></script>
-  <script src="../js/owl.carousel.min.js"></script>
-  <script src="../js/jquery.stellar.min.js"></script>
-  <script src="../js/jquery.countdown.min.js"></script>
-  <script src="../js/bootstrap-datepicker.min.js"></script>
-  <script src="../js/jquery.easing.1.3.js"></script>
-  <script src="../js/aos.js"></script>
-  <script src="../js/jquery.fancybox.min.js"></script>
-  <script src="../js/jquery.sticky.js"></script>
+  <script src="js/jquery-3.3.1.min.js"></script>
+  <script src="js/jquery-migrate-3.0.1.min.js"></script>
+  <script src="js/jquery-ui.js"></script>
+  <script src="js/popper.min.js"></script>
+  <script src="js/bootstrap.min.js"></script>
+  <script src="js/owl.carousel.min.js"></script>
+  <script src="js/jquery.stellar.min.js"></script>
+  <script src="js/jquery.countdown.min.js"></script>
+  <script src="js/bootstrap-datepicker.min.js"></script>
+  <script src="js/jquery.easing.1.3.js"></script>
+  <script src="js/aos.js"></script>
+  <script src="js/jquery.fancybox.min.js"></script>
+  <script src="js/jquery.sticky.js"></script>
 
-  <script src="../js/typed.js"></script>
+  <script src="js/typed.js"></script>
   <script>
     var typed = new Typed('.typed-words', {
       strings: ["Web Apps", " WordPress", " Mobile Apps"],
@@ -281,9 +199,9 @@
     });
   </script>
 
-  <script src="../js/main.js"></script>
-  <script src="../js/smtp.js"></script>
-  <script src="../js/form.js"></script>
+  <script src="js/main.js"></script>
+  <script src="js/smtp.js"></script>
+  <script src="js/form.js"></script>
 
 
 
