--- a/hint2mint/project/version2/pages/blogs/blog2.html
+++ b/hint2mint/project/version2/pages/blogs/blog2.html
@@ -64,7 +64,9 @@
     
   </header>
 <body>
+  <img src="../images/cover.jpg" height="513vh">
     <div class="blog2">
+      
 <h2>How Algorithmic Trading is Changing the Indian Stock Markets </h2>
     - By Kimaya<br><br>
     <img src="../images/blog.jpg"><br>
