--- a/hint2mint/project/version2/pages/footer/privacy.html
+++ b/hint2mint/project/version2/pages/footer/privacy.html
@@ -6,24 +6,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700,900" rel="stylesheet">
-    <link rel="stylesheet" href="../fonts/icomoon/style.css">
+    <link rel="stylesheet" href="../../fonts/icomoon/style.css">
 
-    <link rel="stylesheet" href="../css/bootstrap.min.css">
-    <link rel="stylesheet" href="../css/jquery-ui.css">
-    <link rel="stylesheet" href="../css/owl.carousel.min.css">
-    <link rel="stylesheet" href="../css/owl.theme.default.min.css">
-    <link rel="stylesheet" href="../css/owl.theme.default.min.css">
+    <link rel="stylesheet" href="../../css/bootstrap.min.css">
+    <link rel="stylesheet" href="../../css/jquery-ui.css">
+    <link rel="stylesheet" href="../../css/owl.carousel.min.css">
+    <link rel="stylesheet" href="../../css/owl.theme.default.min.css">
+    <link rel="stylesheet" href="../../css/owl.theme.default.min.css">
 
-    <link rel="stylesheet" href="../css/jquery.fancybox.min.css">
+    <link rel="stylesheet" href="../../css/jquery.fancybox.min.css">
 
-    <link rel="stylesheet" href="../css/bootstrap-datepicker.css">
+    <link rel="stylesheet" href="../../css/bootstrap-datepicker.css">
 
-    <link rel="stylesheet" href="../fonts/flaticon/font/flaticon.css">
+    <link rel="stylesheet" href="../../fonts/flaticon/font/flaticon.css">
 
-    <link rel="stylesheet" href="../css/aos.css">
+    <link rel="stylesheet" href="../../css/aos.css">
 
-    <link rel="stylesheet" href="../css/style.css">
-
+    <link rel="stylesheet" href="../../css/style.css">
 
   </head>
   <header class="site-navbar py-4 bg-white js-sticky-header site-navbar-target" role="banner">
@@ -38,20 +37,21 @@
           <nav class="site-navigation position-relative text-right" role="navigation">
 
             <ul class="site-menu main-menu js-clone-nav mr-auto d-none d-lg-block">
-              <li><a href="#home-section" class="nav-link">Home</a></li>
-              <li><a href="#work-section" class="nav-link">Work</a></li>
+              <li><a href="../../index.html#home-section" class="nav-link">Home</a></li>
+              <li><a href="../../index.html#work-section" class="nav-link">Work</a></li>
               <li>
-                <a href="#services-section" class="nav-link">Services</a>
+                <a href="../../index.html#services-section" class="nav-link">Services</a>
               </li>
               <li class="has-children">
-                <a href="#about-section" class="nav-link">About</a>
+                <a href="../../index.html#about-section" class="nav-link">About</a>
                 <ul class="dropdown">
-                  <li><a href="#about-section">Specialties</a></li>
-                  <li><a href="#team-section">Our Team</a></li>
+                  <li><a href="../../index.html#about-section">Specialties</a></li>
+                  <li><a href="../../index.html#team-section">Our Team</a></li>
                 </ul>
               </li>
-              <li><a href="#blog-section" class="nav-link">Blog</a></li>
-              <li><a href="#contact-section" class="nav-link">Contact</a></li>
+              <li><a href="../../index.html#blog-section" class="nav-link">Blog</a></li>
+              <li><a href="../../index.html#contact-section" class="nav-link">Contact</a></li>
+            
             </ul>
           </nav>
         </div>
@@ -121,8 +121,8 @@ Contact- 9971915524
             <div class="col-md-3 ml-auto">
               <h2 class="footer-heading mb-4">Features</h2>
               <ul class="list-unstyled">
-                <li><a href="../index.html#about-section">About Us</a></li>
-                <li><a href="../index.html#services-section">Services</a></li>
+                <li><a href="../../index.html#about-section">About Us</a></li>
+                <li><a href="../../index.html#services-section">Services</a></li>
                 <li><a href="tandc.html">Terms & Conditions</a></li>
                   <li><a href="disclaimer.html">Disclaimer</a></li>
                   <li><a href="privacy.html">Privacy Policy</a></li>
