--- a/hint2mint/project/version2/index.html
+++ b/hint2mint/project/version2/index.html
@@ -29,14 +29,14 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script>
     $(function () {
-      $("#about-section").load("components/about.html");
-      $("#team-section").load("components/team-section.html");
-      $("#services-section").load("components/services-section.html");
-      $("#work-section").load("components/work-section.html");
-      $("#contact-section").load("components/contact-section.html");
-      $("#blog-section").load("components/blog-section.html");
-      $("#site-section").load("components/site-section.html");
-      $("#testimonial").load("components/testimonial.html");
+      $("#about-section").load("components/about/about.html");
+      $("#team-section").load("components/team/team-section.html");
+      $("#services-section").load("components/services/services-section.html");
+      $("#work-section").load("components/work-section/work-section.html");
+      $("#contact-section").load("components/contact-section/contact-section.html");
+      $("#blog-section").load("components/blogs/blog-section.html");
+      $("#site-section").load("components/site-section/site-section.html");
+      $("#testimonial").load("components/testimonials/testimonial.html");
       $("#index-footer").load("components/headerFooter/index-footer.html");
 
     });
@@ -94,8 +94,8 @@
           <div class="row align-items-center">
 
             <div class="col-11 col-xl-2">
-              <h1 class="mb-0 site-logo"><a href="index.html" class="text-black h2 mb-0"><img src="images/logo.jpg"
-                    alt="images/logo.jpg"><span class="text-primary"></span> </a></h1>
+              <h1 class="mb-0 site-logo"><a href="index.html" class="text-black h2 mb-0"><img src="images/logo/logo.jpg"
+                    alt="images/logo/logo.jpg"><span class="text-primary"></span> </a></h1>
             </div>
             <div class="col-12 col-md-10 d-none d-xl-block">
               <nav class="site-navigation position-relative text-right" role="navigation">
@@ -128,7 +128,7 @@
 
       </header>
 
-      <div class="site-blocks-cover overlay" style="background-image: url('images/cover.jpg');" data-aos="fade"
+      <div class="site-blocks-cover overlay" style="background-image: url('images/cover/cover.jpg');" data-aos="fade"
         data-stellar-background-ratio="0.5">
         <div class="container">
           <div class="row align-items-center justify-content-center text-center">
