footer pages like single.html

--- a/hint2mint/project/version2/index.html
+++ b/hint2mint/project/version2/index.html
@@ -100,20 +100,20 @@
               <nav class="site-navigation position-relative text-right" role="navigation">
       
                 <ul class="site-menu main-menu js-clone-nav mr-auto d-none d-lg-block">
-                  <li><a href="../../index.html#home-section" class="nav-link">Home</a></li>
-                  <li><a href="../../index.html#work-section" class="nav-link">Work</a></li>
+                  <li><a href="#home-section" class="nav-link">Home</a></li>
+                  <li><a href="#work-section" class="nav-link">Work</a></li>
                   <li>
-                    <a href="../../index.html#services-section" class="nav-link">Services</a>
+                    <a href="#services-section" class="nav-link">Services</a>
                   </li>
                   <li class="has-children">
-                    <a href="../../index.html#about-section" class="nav-link">About</a>
+                    <a href="#about-section" class="nav-link">About</a>
                     <ul class="dropdown">
-                      <li><a href="../../index.html#about-section">Specialties</a></li>
-                      <li><a href="../../index.html#team-section">Our Team</a></li>
+                      <li><a href="#about-section">Specialties</a></li>
+                      <li><a href="#team-section">Our Team</a></li>
                     </ul>
                   </li>
-                  <li><a href="../../index.html#blog-section" class="nav-link">Blog</a></li>
-                  <li><a href="../../index.html#contact-section" class="nav-link">Contact</a></li>
+                  <li><a href="#blog-section" class="nav-link">Blog</a></li>
+                  <li><a href="#contact-section" class="nav-link">Contact</a></li>
                 
                 </ul>
               </nav>
