--- a/hint2mint/project/version2/pages/footer/disclaimer.html
+++ b/hint2mint/project/version2/pages/footer/disclaimer.html
@@ -66,7 +66,7 @@
 
       </div>
     </div>
-    
+   <div></div> 
   </header><body><div class="disclaimer">
   <center> <h1>Disclaimers:    </h1></center>
   <ul>
