--- a/hint2mint/project/UI/footer.html
+++ b/hint2mint/project/UI/footer.html
@@ -19,7 +19,7 @@
     </head>
         
 <body>
-  <div></div>
+  <div>Rahul</div>
     <!-- Footer -->
 <footer class="page-footer font-small special-color-dark pt-4">
 
