footer pages and cover image

--- a/hint2mint/project/version2/pages/footer/disclaimer.html
+++ b/hint2mint/project/version2/pages/footer/disclaimer.html
@@ -67,54 +67,84 @@
       </div>
     </div>
    <div></div> 
-  </header><body><div class="disclaimer">
-  <center> <h1>Disclaimers:    </h1></center>
-  <ul>
-      <li>The Video Content has been made available for informational and educational
-purposes only</li>
-<li>We hereby disclaim any and all liability to any party for any direct, indirect, implied,
-punitive, special, incidental or other consequential damages arising directly or
-indirectly from any use of the video content/any content.</li>
-<li>The information in our course is for educational purposes only and is not intended to
-provide a substitute for anything else.</li>
-<li>There can be no assurance as to any particular outcome based on the use of our
-Website and Programs.</li>
-<li>You agree that we are not responsible for your success or failure of any desired
-result, or any other result of any kind that you may have as a result of information
-presented to you through our Website and Programs.</li>
-<li>Your use of any information or materials through our Website or Programs accessible
-on or through our Website or otherwise is entirely at your own risk, for which we shall
-not be liable,</li>
-<li>You understand and agree that you are fully responsible for your physical, mental
-and emotional well-being during any coaching calls or appointments, including your
-choices and decisions.</li>
-<li>All Readings are a form of experiment; no claims are made and results cannot be
-guaranteed.</li>
-<li>XYZ does not warrant that services, content, material, products, including
-downloaded files and software, or other services made available to you through XYZ
-or electronic communications sent from XYZ are free from viruses or other harmful
-components.</li>
-<li>XYZ makes no representations about the accuracy of the information contained in
-the contents, documents and graphics on the site for any purpose</li>
-<li>The contents, images, pictures, graphics etc. on the site could include technical
-inaccuracies or typographical errors</li>
-<li>XYZ does not accept liability for the mental health or welfare resulting from any of the
-techniques used on the course where a participant either strays from the intended
-material or seeks to use the techniques during their own leisure time without the
-appropriate supervision</li>
-<li>Any financial numbers referenced here, or on any of our sites, are illustrative of
-concepts only and should not be considered average earnings, exact earnings, or
-promises for actual or future performance.</li>
-<li>All contracts, forms, checklists, templates and letters contained herein are provided
-for training purposes only.</li>
-<li>A ‘views expressed’ disclaimer(only author, not the employer, organisation etc)</li>
-<li>the performance represented is historical (Financial education)</li>
-<li>Copyright notice Disclaimer</li>
-<li>Reproduction, distribution, republication, and/or re-transmission of material contained
-within this website are prohibited unless the prior written permission of XYZ has been
-obtained.</li>
-<li>Fair use Disclaimer</li></ul></div>
-</body>
-<footer class="site-footer" id="page-footer"> </footer>
+  </header><body>
+    <div class="site-section">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-8 blog-content">
+            <br><br>
+             <h1>Disclaimers</h1> 
+             <ul>
+              <li>The Video Content has been made available for informational and educational
+        purposes only</li>
+        <li>We hereby disclaim any and all liability to any party for any direct, indirect, implied,
+        punitive, special, incidental or other consequential damages arising directly or
+        indirectly from any use of the video content/any content.</li>
+        <li>The information in our course is for educational purposes only and is not intended to
+        provide a substitute for anything else.</li>
+        <li>There can be no assurance as to any particular outcome based on the use of our
+        Website and Programs.</li>
+        <li>You agree that we are not responsible for your success or failure of any desired
+        result, or any other result of any kind that you may have as a result of information
+        presented to you through our Website and Programs.</li>
+        <li>Your use of any information or materials through our Website or Programs accessible
+        on or through our Website or otherwise is entirely at your own risk, for which we shall
+        not be liable,</li>
+        <li>You understand and agree that you are fully responsible for your physical, mental
+        and emotional well-being during any coaching calls or appointments, including your
+        choices and decisions.</li>
+        <li>All Readings are a form of experiment; no claims are made and results cannot be
+        guaranteed.</li>
+        <li>XYZ does not warrant that services, content, material, products, including
+        downloaded files and software, or other services made available to you through XYZ
+        or electronic communications sent from XYZ are free from viruses or other harmful
+        components.</li>
+        <li>XYZ makes no representations about the accuracy of the information contained in
+        the contents, documents and graphics on the site for any purpose</li>
+        <li>The contents, images, pictures, graphics etc. on the site could include technical
+        inaccuracies or typographical errors</li>
+        <li>XYZ does not accept liability for the mental health or welfare resulting from any of the
+        techniques used on the course where a participant either strays from the intended
+        material or seeks to use the techniques during their own leisure time without the
+        appropriate supervision</li>
+        <li>Any financial numbers referenced here, or on any of our sites, are illustrative of
+        concepts only and should not be considered average earnings, exact earnings, or
+        promises for actual or future performance.</li>
+        <li>All contracts, forms, checklists, templates and letters contained herein are provided
+        for training purposes only.</li>
+        <li>A ‘views expressed’ disclaimer(only author, not the employer, organisation etc)</li>
+        <li>the performance represented is historical (Financial education)</li>
+        <li>Copyright notice Disclaimer</li>
+        <li>Reproduction, distribution, republication, and/or re-transmission of material contained
+        within this website are prohibited unless the prior written permission of XYZ has been
+        obtained.</li>
+        <li>Fair use Disclaimer</li></ul></div>
+          <div class="col-md-4 sidebar"> 
+            <div class="sidebar-box">
+              <img src="../../images/testimonials/person_3.jpg" alt="Image" class="img-fluid mb-4 w-50 rounded-circle">
+              <h3 class="text-black">About The Author</h3>
+              <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar.</p>
+              <p><a href="#" class="btn btn-primary btn-md text-white">Read More</a></p>
+            </div>
 
+            <div class="sidebar-box">
+              <h3 class="text-black">Paragraph</h3>
+              <p>When she reached the first hills of the Italic Mountains, she had a last view back on the skyline of her hometown Bookmarksgrove, the headline of Alphabet Village and the subline of her own road, the Line Lane. Pityful a rethoric question ran over her cheek, then she continued her way.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <a href="#" class="bg-primary py-5 d-block">
+      <div class="container">
+        <div class="row justify-content-center">
+          <div class="col-md10"><h2 class="text-white">Let's Get Started</h2></div>
+        </div>
+      </div>  
+    </div>
+    </a>  
+<footer class="site-footer" id="page-footer"> </footer>
+  </div> <!-- .site-wrap -->
+  </body>
 </html>
+    
