--- a/hint2mint/project/version2/pages/footer/privacy.html
+++ b/hint2mint/project/version2/pages/footer/privacy.html
@@ -69,9 +69,13 @@
     
   </header>
   <body>
-<div class="privacy">
-    <h2>PRIVACY POLICY</h2><br>
-<h4>PLEASE READ THE PRIVACY POLICY CAREFULLY. BY ACCESSING THIS WEBSITE, YOU AGREE TO BE BOUND BY THE TERMS DESCRIBED HEREIN AND ALL TERMS INCORPORATED BY REFERENCE. IF YOU DO NOT AGREE TO ALL OF THESE TERMS, DO NOT USE THE WEBSITE.</h4>
+    <div class="site-section">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-8 blog-content">
+            <br><br>
+             <h1>Privacy Policy</h1> 
+             PLEASE READ THE PRIVACY POLICY CAREFULLY. BY ACCESSING THIS WEBSITE, YOU AGREE TO BE BOUND BY THE TERMS DESCRIBED HEREIN AND ALL TERMS INCORPORATED BY REFERENCE. IF YOU DO NOT AGREE TO ALL OF THESE TERMS, DO NOT USE THE WEBSITE.
 <h3>Table of contents:</h3><ul>
 <li> Purpose </li>
 <li> General applicability</li>
@@ -110,9 +114,39 @@ Mail to:
 Dixita Jain <br>
 C-55 Ahinsa Vihar sector 9 rohini, Delhi 110085<br>
 Contact- 9971915524
-
 </div>
-  </body>
-  <footer class="site-footer" id="page-footer"> </footer>
+          <div class="col-md-4 sidebar"> 
+            <div class="sidebar-box">
+              <img src="../../images/testimonials/person_3.jpg" alt="Image" class="img-fluid mb-4 w-50 rounded-circle">
+              <h3 class="text-black">About The Author</h3>
+              <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar.</p>
+              <p><a href="#" class="btn btn-primary btn-md text-white">Read More</a></p>
+            </div>
 
+            <div class="sidebar-box">
+              <h3 class="text-black">Paragraph</h3>
+              <p>When she reached the first hills of the Italic Mountains, she had a last view back on the skyline of her hometown Bookmarksgrove, the headline of Alphabet Village and the subline of her own road, the Line Lane. Pityful a rethoric question ran over her cheek, then she continued her way.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <a href="#" class="bg-primary py-5 d-block">
+      <div class="container">
+        <div class="row justify-content-center">
+          <div class="col-md10"><h2 class="text-white">Let's Get Started</h2></div>
+        </div>
+      </div>  
+    </div>
+    </a>  
+<footer class="site-footer" id="page-footer"> </footer>
+  </div> <!-- .site-wrap -->
+  </body>
 </html>
+    
+
+
+
+
+
+
