--- a/hint2mint/project/version2/pages/blogs/relativestrengthindex.html
+++ b/hint2mint/project/version2/pages/blogs/relativestrengthindex.html
@@ -117,7 +117,7 @@
       </div>  
     </div>
   </div>
-  <br><br><br>
+  
     <div class="site-section">
       <div class="container">
         <div class="row">
@@ -125,6 +125,7 @@
              <p>
                 <h2> Wondering how to make predictions about the prices changes in shares?</h2><br>
                 <b> RELATIVE STRENGTH INDEX (RSI)</b> can be your tool.<br><br>
+                <h5>-by Keshina Goyal</h5>
                 RSI is a momentum oscillator that measures the speed and change of price movements which ranges between 0 to 100 i.e. [0-100].<br>
              Generally, when RSI goes beyond the 70 mark the share is considered OverBought and when it goes below the 30 mark the share is considered  OverBought and when it goes below the 30 mark the share is considered OverSold. These traditional levels can be adjusted as per the requirements of security and analytics.
              
