--- a/hint2mint/project/version2/pages/footer/privacy.html
+++ b/hint2mint/project/version2/pages/footer/privacy.html
@@ -127,10 +127,10 @@ Contact- 9971915524
     <a href="#" class="bg-primary py-5 d-block">
       <div class="container">
         <div class="row justify-content-center">
-          <div class="col-md10"><h2 class="text-white">Let's Get Started</h2></div>
+          <div class="col-md10"><h2 class="text-white">Let's Get Started</h2>
+          </div>
         </div>
       </div>  
-    </div>
     </a>  
 <footer class="site-footer" id="page-footer"> </footer>
   </div> <!-- .site-wrap -->
