--- a/hint2mint/project/version2/pages/footer/tandc.html
+++ b/hint2mint/project/version2/pages/footer/tandc.html
@@ -164,9 +164,9 @@
 <a href="#" class="bg-primary py-5 d-block">
 <div class="container">
   <div class="row justify-content-center">
-    <div class="col-md10"><h2 class="text-white">Let's Get Started</h2></div>
-  </div>
-</div>  
+    <div class="col-md10"><h2 class="text-white">Let's Get Started</h2>
+    </div>
+  </div>  
 </div>
 </a>  
 <footer class="site-footer" id="page-footer"> </footer>
