--- a/hint2mint/project/version2/pages/blogs/algorithmictrading.html
+++ b/hint2mint/project/version2/pages/blogs/algorithmictrading.html
@@ -23,6 +23,8 @@
     <link rel="stylesheet" href="../../css/aos.css">
 
     <link rel="stylesheet" href="../../css/style.css">
+
+    <link rel="stylesheet" href="../../css/navcolor.css">
     
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script>
@@ -73,7 +75,7 @@
           </div>
         </div>
   
-        <header class="site-navbar py-4 bg-white js-sticky-header site-navbar-target" role="banner">
+        <header class="site-navbar py-4 bg-info js-sticky-header site-navbar-target" role="banner">
 
           <div class="container">
             <div class="row align-items-center">
@@ -236,7 +238,11 @@
   
   <script src="../../js/main.js"></script>
   
-
+  <script>
+    $(window).scroll(function(){
+      $('header').toggleClass('scrolled',$(this).scrollTop() > 600);
+    });
+  </script>
 
   </body>
 </html>
