--- a/hint2mint/project/version2/pages/footer/privacy.html
+++ b/hint2mint/project/version2/pages/footer/privacy.html
@@ -23,6 +23,8 @@
     <link rel="stylesheet" href="../../css/aos.css">
 
     <link rel="stylesheet" href="../../css/style.css">
+
+    <link rel="stylesheet" href="../../css/navcolor.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script>
       $(function () {
@@ -30,7 +32,7 @@
       });
     </script>
   </head>
-  <header class="site-navbar py-4 bg-white js-sticky-header site-navbar-target" role="banner">
+  <header class="site-navbar py-4 bg-info js-sticky-header site-navbar-target" role="banner">
 
     <div class="container">
       <div class="row align-items-center">
@@ -134,6 +136,11 @@ Contact- 9971915524
     </a>  
 <footer class="site-footer" id="page-footer"> </footer>
   </div> <!-- .site-wrap -->
+  <script>
+    $(window).scroll(function(){
+      $('header').toggleClass('scrolled',$(this).scrollTop() > 600);
+    });
+  </script>
   </body>
 </html>
     
