--- a/hint2mint/project/version2/pages/blogs/algorithmictrading.html
+++ b/hint2mint/project/version2/pages/blogs/algorithmictrading.html
@@ -189,7 +189,7 @@
             
             
             <div class="sidebar-box">
-              <img src="../../images/testimonials/person_3.jpg" alt="Image" class="img-fluid mb-4 w-50 rounded-circle">
+              <img src="../../images/testimonials/default-person.png" alt="Image" class="img-fluid mb-4 w-50 rounded-circle">
               <h3 class="text-black">About The Author</h3>
               <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar.</p>
               <p><a href="#" class="btn btn-primary btn-md text-white">Read More</a></p>
