--- a/hint2mint/project/version2/pages/blogs/whichsector.html
+++ b/hint2mint/project/version2/pages/blogs/whichsector.html
@@ -177,11 +177,23 @@
 
   </div> <!-- .site-wrap -->
 
+  <script src="../../js/jquery-3.3.1.min.js"></script>
+  <script src="../../js/jquery-migrate-3.0.1.min.js"></script>
+  <script src="../../js/jquery-ui.js"></script>
+  <script src="../../js/popper.min.js"></script>
+  <script src="../../js/bootstrap.min.js"></script>
+  <script src="../../js/owl.carousel.min.js"></script>
+  <script src="../../js/jquery.stellar.min.js"></script>
+  <script src="../../js/jquery.countdown.min.js"></script>
+  <script src="../../js/bootstrap-datepicker.min.js"></script>
+  <script src="../../js/jquery.easing.1.3.js"></script>
+  <script src="../../js/aos.js"></script>
+  <script src="../../js/jquery.fancybox.min.js"></script>
+  <script src="../../js/jquery.sticky.js"></script>
 
-  </body>
-  <script src="../../js/newsletter.js"></script>
+  
   <script src="../../js/main.js"></script>
-  <script src="../../js/smtp.js"></script>
+  
   <script>
     $(window).scroll(function(){
       $('header').toggleClass('scrolled',$(this).scrollTop() > 600);
