about the author/ blog

--- a/hint2mint/project/version2/pages/blogs/algorithmictrading.html
+++ b/hint2mint/project/version2/pages/blogs/algorithmictrading.html
@@ -193,8 +193,7 @@
             <div class="sidebar-box">
               <img src="../../images/testimonials/default-person.png" alt="Image" class="img-fluid mb-4 w-50 rounded-circle">
               <h3 class="text-black">About The Author</h3>
-              <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar.</p>
-              <p><a href="#" class="btn btn-primary btn-md text-white">Read More</a></p>
+              <p>The author is a first year college student at Sri Venkateswara College, studying business and finances. When she’s not writing, you can find her buried in a book; or trying to find the secret to becoming rich; or making friends with the neighborhood dogs, or having a political debate for fun.</p>
             </div>
 
             <div class="sidebar-box">
