changes made except header banner

--- a/hint2mint/project/version2/pages/blogs/relativestrengthindex.html
+++ b/hint2mint/project/version2/pages/blogs/relativestrengthindex.html
@@ -237,7 +237,8 @@
 
   
   <script src="../../js/main.js"></script>
-  
+  <script src="../../js/smtp.js"></script>  
+
   <script>
     $(window).scroll(function(){
       $('header').toggleClass('scrolled',$(this).scrollTop() > 600);
