--- a/hint2mint/project/version2/pages/footer/disclaimer.html
+++ b/hint2mint/project/version2/pages/footer/disclaimer.html
@@ -98,15 +98,15 @@
         choices and decisions.</li>
         <li>All Readings are a form of experiment; no claims are made and results cannot be
         guaranteed.</li>
-        <li>XYZ does not warrant that services, content, material, products, including
-        downloaded files and software, or other services made available to you through XYZ
-        or electronic communications sent from XYZ are free from viruses or other harmful
+        <li>Hint2mint does not warrant that services, content, material, products, including
+        downloaded files and software, or other services made available to you through Hint2mint
+        or electronic communications sent from Hint2mint are free from viruses or other harmful
         components.</li>
-        <li>XYZ makes no representations about the accuracy of the information contained in
+        <li>Hint2mint makes no representations about the accuracy of the information contained in
         the contents, documents and graphics on the site for any purpose</li>
         <li>The contents, images, pictures, graphics etc. on the site could include technical
         inaccuracies or typographical errors</li>
-        <li>XYZ does not accept liability for the mental health or welfare resulting from any of the
+        <li>Hint2mint does not accept liability for the mental health or welfare resulting from any of the
         techniques used on the course where a participant either strays from the intended
         material or seeks to use the techniques during their own leisure time without the
         appropriate supervision</li>
@@ -119,7 +119,7 @@
         <li>the performance represented is historical (Financial education)</li>
         <li>Copyright notice Disclaimer</li>
         <li>Reproduction, distribution, republication, and/or re-transmission of material contained
-        within this website are prohibited unless the prior written permission of XYZ has been
+        within this website are prohibited unless the prior written permission of Hint2mint has been
         obtained.</li>
         <li>Fair use Disclaimer</li></ul></div>
           <div class="col-md-4 sidebar"> 
