--- a/hint2mint/project/version2/pages/footer/tandc.html
+++ b/hint2mint/project/version2/pages/footer/tandc.html
@@ -80,7 +80,7 @@
     <h2>Consent</h2>
     By using our Website you consent to our collection and use of your personal information as described in this Privacy Policy.
     <h2>Services offered</h2>
-    The services of this website ("Website") are available only to the registered users/subscribers abiding by the applicable terms and conditions. By registering yourself as a user and subscribing to avail the services of this website, it will be deemed that you have read, understood and agreed to fully abide by all the terms and conditions of the website as contained herein. Further, by registering on the website, you agree to: Make your contact details available to Hint2mint partners so that you may be contacted by Hint2mint partners for education information through email, telephone and SMS; Receive promotional mails/special offers from the Website or be contacted by Hint2mint in accordance with the privacy settings set by you. In order to use Hint2mint online services, you must subscribe to the portal. Services can be availed as long as the subscription is valid. 
+    The services of this website are available only to the registered users/subscribers abiding by the applicable terms and conditions. By registering yourself as a user and subscribing to avail the services of this website, it will be deemed that you have read, understood and agreed to fully abide by all the terms and conditions of the website as contained herein. Further, by registering on the website, you agree to: Make your contact details available to Hint2mint partners so that you may be contacted by Hint2mint partners for education information through email, telephone and SMS; Receive promotional mails/special offers from the Website or be contacted by Hint2mint in accordance with the privacy settings set by you. In order to use Hint2mint online services, you must subscribe to the portal. Services can be availed as long as the subscription is valid. 
     <h3>List of services offered </h3>
     <ul>
       <li>Introduction to the World of Finance</li>
@@ -134,7 +134,7 @@
     We are not liable for any infringement of copyright arising out of materials posted on or transmitted through the website. In the event you have any grievance in relation to any content uploaded on the Website, you may contact our Grievance Officer; or write at the following address- <br><br>
     Mail to: 
     Dixita Jain <br>
-    C-55 AhinsaVihar sector 9 rohini, Delhi 110085<br>
+    C-55 Ahinsa Vihar sector 9 rohini, Delhi 110085<br>
     Contact- 9971915524
     
     <h3>Entire Agreement</h3>
@@ -151,7 +151,7 @@
     Contact- 9971915524<br>
     Mail to: 
     Dixita Jain <br>
-    C-55 AhinsaVihar sector 9 Rohini, Delhi 110085
+    C-55 Ahinsa Vihar sector 9 Rohini, Delhi 110085
     </div>
     <div class="col-md-4 sidebar"> 
       <div class="sidebar-box">
