--- a/hint2mint/project/version2/pages/blogs/algorithmictrading.html
+++ b/hint2mint/project/version2/pages/blogs/algorithmictrading.html
@@ -236,6 +236,7 @@
 
   
   <script src="../../js/main.js"></script>
+  <script src="../../js/smtp.js"></script>
   
   <script>
     $(window).scroll(function(){
