--- a/hint2mint/project/version2/pages/blogs/whichsector.html
+++ b/hint2mint/project/version2/pages/blogs/whichsector.html
@@ -193,7 +193,7 @@
 
   
   <script src="../../js/main.js"></script>
-  
+  <script src="../../js/smtp.js"></script>
   <script>
     $(window).scroll(function(){
       $('header').toggleClass('scrolled',$(this).scrollTop() > 600);
