--- a/hint2mint/project/version2/pages/blogs/algorithmictrading.html
+++ b/hint2mint/project/version2/pages/blogs/algorithmictrading.html
@@ -125,7 +125,7 @@
         <div class="row">
           <div class="col-md-8 blog-content">
              <h1>How Algorithmic Trading is Changing the Indian Stock Markets</h1> 
-             <h2>- By Kimaya</h2>
+             <h2>- By Kimaya Patil</h2>
              <img src="../../images/blogs/algorithmictrading/blog.jpg" height="10%" width="100%"><br>
              <p>The advent of Algorithmic Trading happened in India when, back in 2008, the Securities and Exchange Board of India
              (SEBI) allowed stockbrokers to offer Direct Market Access (DMA) to their clients. Since this change took place in
