--- a/hint2mint/project/version2/pages/blogs/whichsector.html
+++ b/hint2mint/project/version2/pages/blogs/whichsector.html
@@ -111,7 +111,7 @@
           </div>
         
         </header>
-        <div class="site-blocks-cover overlay" style="background-image: url(../../images/blogs/blogbanner.jpg);" data-aos="fade" data-stellar-background-ratio="0.5">
+        <div class="site-blocks-cover overlay" style="background-image:linear-gradient(rgba(0, 0, 0, 0.5), rgba(0,0,0,0.5)), url(../../images/blogs/blogbanner.jpg);" data-aos="fade" data-stellar-background-ratio="0.5">
           <div class="container">
             
           </div>
@@ -150,13 +150,8 @@
               <img src="../../images/testimonials/default-person.png" alt="Image" class="img-fluid mb-4 w-50 rounded-circle">
               <h3 class="text-black">About The Author</h3>
               <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar.</p>
-              <p><a href="#" class="btn btn-primary btn-md text-white">Read More</a></p>
-            </div>
+             </div>
 
-            <div class="sidebar-box">
-              <h3 class="text-black">Paragraph</h3>
-              <p>When she reached the first hills of the Italic Mountains, she had a last view back on the skyline of her hometown Bookmarksgrove, the headline of Alphabet Village and the subline of her own road, the Line Lane. Pityful a rethoric question ran over her cheek, then she continued her way.</p>
-            </div>
           </div>
         </div>
       </div>
