issue : Our work from work

--- a/hint2mint/project/version2/pages/blogs/relativestrengthindex.html
+++ b/hint2mint/project/version2/pages/blogs/relativestrengthindex.html
@@ -87,7 +87,7 @@
         
                   <ul class="site-menu main-menu js-clone-nav mr-auto d-none d-lg-block">
                     <li><a href="../../index.html#home-section" class="nav-link">Home</a></li>
-                    <li><a href="../../index.html#work-section" class="nav-link">Work</a></li>
+                    <li><a href="../../index.html#work-section" class="nav-link">Our Work</a></li>
                     <li>
                       <a href="../../index.html#services-section" class="nav-link">Services</a>
                     </li>
