--- a/hint2mint/project/version2/pages/footer/tandc.html
+++ b/hint2mint/project/version2/pages/footer/tandc.html
@@ -66,7 +66,7 @@
                     <li><a href="../../index.html#home-section" class="nav-link">Home</a></li>
                     <li><a href="../../index.html#work-section" class="nav-link">Our Work</a></li>
                     <li>
-                      <a href="../../index.html#services-section" class="nav-link">Services</a>
+                      <a href="../../index.html#services-section" class="nav-link">Our Services</a>
                     </li>
                     <li class="has-children">
                       <a href="../../index.html#about-section" class="nav-link">About</a>
@@ -102,7 +102,7 @@
         <div class="row">
           <div class="col-md-8 blog-content">
     <h1>Terms and Conditions</h1>
-    The following terms and conditions apply to all users and viewers of this web site. By accessing or using this site, you agree to be bound by the terms and conditions of use outlined below. Please read this statement carefully before using this site. If you do not agree to these terms and conditions, exit this site now and do not use or access the site.
+    The following terms and conditions apply to all users and viewers of this website. By accessing or using this site, you agree to be bound by the terms and conditions of use outlined below. Please read this statement carefully before using this site. If you do not agree to these terms and conditions, exit this site now and do not use or access the site. 
     <br>
     <h2>Consent</h2>
     By using our website you consent to our collection and use of your personal information as described in this Privacy Policy.
@@ -187,7 +187,7 @@
 <a href="#" class="bg-primary py-5 d-block">
 <div class="container">
   <div class="row justify-content-center">
-    <div class="col-md10"><h2 class="text-white">Let's Get Started</h2>
+    <div class="col-md10"><h2 class="text-white">Let's Walk Back To The Top</h2>
     </div>
   </div>  
 </div>
