--- a/hint2mint/project/version2/pages/footer/privacy.html
+++ b/hint2mint/project/version2/pages/footer/privacy.html
@@ -66,7 +66,7 @@
                     <li><a href="../../index.html#home-section" class="nav-link">Home</a></li>
                     <li><a href="../../index.html#work-section" class="nav-link">Our Work</a></li>
                     <li>
-                      <a href="../../index.html#services-section" class="nav-link">Services</a>
+                      <a href="../../index.html#services-section" class="nav-link">Our Services</a>
                     </li>
                     <li class="has-children">
                       <a href="../../index.html#about-section" class="nav-link">About</a>
@@ -149,7 +149,7 @@ Contact- 9971915524
     <a href="#" class="bg-primary py-5 d-block">
       <div class="container">
         <div class="row justify-content-center">
-          <div class="col-md10"><h2 class="text-white">Let's Get Started</h2>
+          <div class="col-md10"><h2 class="text-white">Let's Walk Back To The Top</h2>
           </div>
         </div>
       </div>  
