--- a/hint2mint/project/version2/index.html
+++ b/hint2mint/project/version2/index.html
@@ -141,15 +141,11 @@
 
   <section class="site-section" id="work-section"></section>
 
-  <section class="site-section border-bottom" id="services-section"></section>
-
-  <section class="site-section testimonial-wrap" id="testimonial">
-
-  </section>
-
-
-
   <div class="site-section" id="about-section"> </div>
+
+  <section class="site-section testimonial-wrap" id="testimonial"></section>
+
+  <section class="site-section border-bottom" id="services-section"></section>
 
   <div class="site-section border-bottom" id="team-section"> </div>
 
