--- a/hint2mint/project/version2/index.html
+++ b/hint2mint/project/version2/index.html
@@ -199,7 +199,8 @@
 
   <script src="js/main.js"></script>
   <script src="js/smtp.js"></script>
-  <script src="js/form.js"></script>
+  <script src="js/index.js"></script>
+  <script src="js/newsletter.js"></script>
 <script>
   $(window).scroll(function(){
     $('header').toggleClass('scrolled',$(this).scrollTop() > 600);
