--- a/hint2mint/project/UI/cs.html
+++ b/hint2mint/project/UI/cs.html
@@ -19,6 +19,9 @@
 
         <!-- Latest compiled JavaScript -->
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script> 
+
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
         
         <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
@@ -188,6 +191,77 @@
         </div>
     </div>
 </section>
+
+<section class="ourservices">
+  <div class="container text-center">
+  <h1>Our Services</h1>
+    <div class="row rowsetting">
+      <div class="col-lg-4 col-md-4 col-sm-4 col-10 d-block m-auto">
+        <div class="unit-4 d-flex">
+          <div class="imgsetting d-block m-auto">
+            <i class="fa fa-shopping-cart fa-3x"></i>
+            <h5>Introduction to the world of finance</h5>
+            <p>
+              Welcome to the palpable world of finance, wherein we introduce you with the pragmatic knowledge.  
+            </p>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-lg-4 col-md-4 col-sm-4 col-10 d-block m-auto">
+        <div class="imgsetting d-block m-auto">
+          <i class="fa fa-shopping-cart fa-3x"></i>
+          <h5>Introduction to the basics of banking</h5>
+          <p>
+            We educate and inspire today's youth by connecting them with modern day banking. 
+          </p>
+        </div>
+      </div>
+
+      <div class="col-lg-4 col-md-4 col-sm-4 col-10 d-block m-auto">
+        <div class="imgsetting d-block m-auto">
+          <i class="fa fa-shopping-cart fa-3x"></i>
+          <h5>Financial courses</h5>
+          <p>
+            Let's learn and reinvent how financial courses can double up your knowledge and help you grow.  
+          </p>
+        </div>
+      </div>
+    </div>
+
+    <div class="row rowsetting">
+      <div class="col-lg-4 col-md-4 col-sm-4 col-10 d-block m-auto">
+        <div class="imgsetting d-block m-auto">
+          <i class="fa fa-shopping-cart fa-3x"></i>
+          <h5>Career Counselling</h5>
+          <p>
+            Discover your true calling and formulate your own career path. Our glorious faculty is set to direct you to your best career path. 
+          </p>
+        </div>
+      </div>
+
+      <div class="col-lg-4 col-md-4 col-sm-4 col-10 d-block m-auto">
+        <div class="imgsetting d-block m-auto">
+          <i class="fa fa-shopping-cart fa-3x"></i>
+          <h5>Improving Presentation skills</h5>
+          <p>
+            Are you ready to refine your presentation expertise ? If yes, you've find the right place.  
+          </p>
+        </div>
+      </div>
+
+      <div class="col-lg-4 col-md-4 col-sm-4 col-10 d-block m-auto">
+        <div class="imgsetting d-block m-auto">
+          <i class="fa fa-shopping-cart fa-3x"></i>
+          <h5>Improving interview skills</h5>
+          <p>
+            We prepare you to pitch your best self to get hired and help you enhance your interview skills.  
+          </p>
+        </div>
+      </div>  
+      </div>
+    </div>
+</section>    
 
 
 <section class="blog">
