--- a/hint2mint/project/version2/pages/footer/disclaimer.html
+++ b/hint2mint/project/version2/pages/footer/disclaimer.html
@@ -88,7 +88,7 @@
           </div>
         
         </header>
-        <div class="site-blocks-cover overlay" style="background-image: url(../../images/disclamier/d5.jpg" data-aos="fade" data-stellar-background-ratio="0.5">
+        <div class="site-blocks-cover overlay" style="background-image: url(../../images/disclamier/d5.jpg);" data-aos="fade" data-stellar-background-ratio="0.5">
           <div class="container">
             
           </div>
