--- a/hint2mint/project/version2/index.html
+++ b/hint2mint/project/version2/index.html
@@ -46,7 +46,15 @@
 
 
   </script>
-
+<style>
+  body {
+    background-image: url("images/1.png");
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    font-weight: bolder;
+    
+  }
+</style>
 
 </head>
 
@@ -135,7 +143,7 @@
       </div>   
     </div>  
 </div>
-
+<body>
 
   <section class="site-section" id="site-section"></section>
 
