--- a/hint2mint/project/version2/pages/blogs/whichsector.html
+++ b/hint2mint/project/version2/pages/blogs/whichsector.html
@@ -109,7 +109,14 @@
         
             </div>
           </div>
-        
+          <style>
+            body {
+              background-image: url("../../images/1.png");
+              background-repeat: no-repeat;
+              background-attachment: fixed;
+              font-weight: bolder;
+            }
+          </style>
         </header>
         <div class="site-blocks-cover overlay" style="background-image:linear-gradient(rgba(0, 0, 0, 0.5), rgba(0,0,0,0.5)), url(../../images/blogs/blogbanner.jpg);" data-aos="fade" data-stellar-background-ratio="0.5">
           <div class="container">
