--- a/hint2mint/project/version2/pages/blogs/whichsector.html
+++ b/hint2mint/project/version2/pages/blogs/whichsector.html
@@ -156,7 +156,8 @@
             <div class="sidebar-box">
               <img src="../../images/testimonials/default-person.png" alt="Image" class="img-fluid mb-4 w-50 rounded-circle">
               <h3 class="text-black">About The Author</h3>
-              <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar.</p>
+              <p>The author’s journey started as a B.Com Hons graduate from Sri Guru Gobind Singh College of Commerce. She is besotted with the study of finance and thus she is a candidate of CFA Level II.  If trying to find some motivation when low, she may be a good motivator and tries to suit in everyone’s shoe to feel what the opposite person is feeling. Currently she is learning work ethics and skills under Hint2Mint.In her articles, she tries to explain things in the simplest manner so that even beginners with no knowledge can understand. She has laid a brick to start out her voyage as a finance expert.
+                In her idle time, she likes to be creative and artsy. Her hobbies include painting and crafting beautiful little things made out of anything that interests her. She has a lots of love to give to every animal in her locality and makes sure that they live a comfortable life in every way possible.</p>
              </div>
 
           </div>
