--- a/hint2mint/project/version2/index.html
+++ b/hint2mint/project/version2/index.html
@@ -27,7 +27,8 @@
 
   <link rel="stylesheet" href="css/navcolor.css">
 
-
+  <script src="https://smtpjs.com/v3/smtp.js">
+</script>
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script>
@@ -206,7 +207,6 @@
   </script>
 
   <script src="js/main.js"></script>
-  <script src="js/smtp.js"></script>
   <script src="js/index.js"></script>
   <script src="js/newsletter.js"></script>
 <script>
