--- a/hint2mint/project/version2/pages/footer/disclaimer.html
+++ b/hint2mint/project/version2/pages/footer/disclaimer.html
@@ -25,7 +25,9 @@
     <link rel="stylesheet" href="../../css/style.css">
 
     <link rel="stylesheet" href="../../css/navcolor.css">
-    
+
+    <script src="https://smtpjs.com/v3/smtp.js">
+</script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script>
     $(function () {
@@ -188,7 +190,8 @@
 
   
   <script src="../../js/main.js"></script>
-  <script src="../../js/smtp.js"></script>
+  <script src="../../js/index.js"></script>
+  <script src="../../js/newsletter.js"></script>
   <script>
     $(window).scroll(function(){
       $('header').toggleClass('scrolled',$(this).scrollTop() > 600);
